Create Api GetUserVerificationStatus
